# BBLMLP

./: .gitignore  AGENTS.md  README.md  issues.md  pyproject.toml
config/: settings.yaml
docs/: cli-usage.md
docs/kalshi/: 2026-07-09-kalshi-mlb-market-discovery.md
docs/research/youtube-numeristical/: 01-data-wrangling-and-pipeline-design.md  02-model-building-and-calibration.md  03-market-odds-and-edge-evaluation.md  04-pitching-and-bullpen-features.md  05-batter-and-lineup-features.md  06-backtesting-calibration-and-overunder.md  README.md
docs/roadmap/: 2026-07-11-research-backlog.md
docs/superpowers/plans/: 2026-07-09-foundation-mlb-data.md  2026-07-09-mlb-data-layer.md  2026-07-12-kalshi-snapshot-ingest.md  2026-07-13-park-reference.md  2026-07-13-rolling-window-features.md  (+1 more)
scratch/winmodel/: README.md  pyproject.toml
scratch/winmodel/src/winmodel/: __init__.py  elo.py  evaluate.py  model.py
scratch/winmodel/tests/: conftest.py  test_api.py  test_elo.py  test_evaluate.py  test_model.py
scripts/: capture_schedule_fixture.py  peek.py
src/bblmlp/: cli.py  config.py
tests/: test_cli.py  test_config.py  test_fangraphs.py  test_features_bullpen.py  test_features_rolling.py  test_ingest_mlb.py  test_kalshi_ingest.py  test_kalshi_snapshot.py  test_kalshi_team_map.py  test_live.py  test_park_reference.py  test_players.py  test_rollups.py  test_schedule_normalizer.py  test_standings.py  test_statcast.py  test_statsapi_client.py  test_team_crosswalk.py  test_warehouse.py
tests/fixtures/: settings_min.yaml  statsapi_schedule.json
(+26 files in other folders)
