[project]
name = "bblmlp"
version = "0.1.0"
description = "Baseball ML prediction for Kalshi single-game markets"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "duckdb>=1.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "MLB-StatsAPI>=1.7",
    "pybaseball>=2.2",
]

[project.scripts]
bblmlp = "bblmlp.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bblmlp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
